dev/test_programs/INVALID/group5/scanner_literal_rune_invalid_escape.go
package scanner_literal_rune_invalid_escape

// No backslash needed for double quotes

var r rune = '\"'

